# folder-scan

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: folder.rs  main.rs  scan.rs  theme.rs  ui.rs  utils.rs  widgets.rs
