[package]
name = "folder-scan"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/ImShyMike/folder-scan"
description = "Simple, lightweigth and blazingly fast folder scanner with a tree-like visualization that can be used to find space hogs"
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
fltk = { version = "1.4", default-features = false }
open = { version = "5.3.2", default-features = false }
rfd = { version = "0.15.4", default-features = false, features = ["xdg-portal", "async-std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
